# Interstitial-calculator

./: README.md  pyproject.toml  requirements.txt  streamlit_app.py
src/lattice_kmax/: __init__.py  cache.py  cli.py  fastscan.py  geometry.py  kmax.py  neighbors.py  s_star_fixed_ratios.py  sstar.py  utils.py
tests/: test_kmax_equal.py  test_sstar_ratios.py
